Other containers: properly align them with flexbox and fix legend sizes

--- a/static/style.css
+++ b/static/style.css
@@ -48,6 +48,12 @@ a {
     margin-top: 5px;
     margin-bottom: 5px;
 }
+#other_containers {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
+}
 @media only screen and (max-width: 575px) {
     table tr {
         line-height: 20px;
